--- a/STV.ipynb
+++ b/STV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 38,
    "id": "6db3a70a-1d4e-41c8-80de-7286c0f9f92d",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,12 @@
     "import re\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from collections import defaultdict\n",
-    "  \n"
+    "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 39,
    "id": "fdc67b2e-3bbe-4729-adf9-6702d788cea8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 40,
    "id": "6ff41c88-8505-4e6b-b872-5a3f7b346593",
    "metadata": {},
    "outputs": [],
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 41,
    "id": "17523417-7915-411f-adc1-912f417accf6",
    "metadata": {},
    "outputs": [
@@ -80,13 +79,12 @@
     "for preference, extra_counts in new_preferece_counts:\n",
     "    preferences_to_counts[preference] += extra_counts\n",
     "for preference in preferences_with_ties:\n",
-    "    del preferences_to_counts[preference]\n",
-    "    "
+    "    del preferences_to_counts[preference]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 42,
    "id": "30e0b9de-dd51-4262-afb8-c707522fde6b",
    "metadata": {},
    "outputs": [
@@ -96,7 +94,7 @@
        "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11']"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 43,
    "id": "146ba520-4c2c-41c5-882a-e2120c6c9ee9",
    "metadata": {},
    "outputs": [],
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 44,
    "id": "e731af6c-212a-426e-ad7d-6fa40208c054",
    "metadata": {},
    "outputs": [],
@@ -130,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 45,
    "id": "20db1221-d664-45f8-a45f-8f695c28b336",
    "metadata": {},
    "outputs": [
@@ -160,16 +158,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1749</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>[3, 6]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1750</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>[9]</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>1751</th>\n",
        "      <td>0.5</td>\n",
@@ -266,8 +254,6 @@
       ],
       "text/plain": [
        "        n                    preference\n",
-       "1749  1.0                        [3, 6]\n",
-       "1750  1.0                           [9]\n",
        "1751  0.5   [3, 4, 5, 6, 7, 8, 9, 1, 2]\n",
        "1752  0.5  [3, 4, 5, 6, 7, 8, 9, 10, 2]\n",
        "1753  0.5   [2, 4, 5, 7, 9, 3, 6, 1, 8]\n",
@@ -288,19 +274,19 @@
        "1768  0.5            [2, 4, 1, 8, 6, 9]"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# has +9 new preferences due to the ties introduced\n",
-    "df.tail(20)"
+    "df.tail(18)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 46,
    "id": "cc48fd0c-0bc2-4734-a3aa-f4b2cd6a3b72",
    "metadata": {},
    "outputs": [
@@ -310,7 +296,7 @@
        "2477.0"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 53,
    "id": "f0591503-c6b3-41c8-aed4-145ff1aacf45",
    "metadata": {},
    "outputs": [],
@@ -359,13 +345,14 @@
     "            print(\"Reached a decision\")\n",
     "            break\n",
     "        print('removing alternatives', min_p_alternatives)\n",
-    "        df = remove_alternatives(votes_df, min_p_alternatives)\n",
+    "        votes_df = remove_alternatives(votes_df, min_p_alternatives)\n",
+    "        print(votes_df)\n",
     "    return list(scores.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 54,
    "id": "83744cc4-1bed-48c6-ba0a-901ff4b99e45",
    "metadata": {},
    "outputs": [
@@ -375,33 +362,159 @@
      "text": [
       "{'1': 246, '2': 453, '3': 412, '4': 384, '5': 352, '6': 27, '7': 94, '8': 463, '9': 37, '10': 0, '11': 0}\n",
       "removing alternatives ['10', '11']\n",
-      "{'7': 1136, '8': 198, '3': 333, '1': 54, '5': 128, '2': 491, '6': 54, '9': 14, '4': 60}\n",
-      "removing alternatives ['9']\n",
-      "{'7': 1129, '8': 174, '3': 354, '1': 71, '5': 123, '2': 518, '6': 60, '4': 38}\n",
-      "removing alternatives ['4']\n",
-      "{'7': 1067, '8': 120, '3': 372, '1': 81, '5': 119, '2': 612, '6': 70}\n",
+      "         n                preference\n",
+      "0     31.0                    [3, 8]\n",
+      "1     30.0                    [4, 2]\n",
+      "2     27.0                       [3]\n",
+      "3     24.0                    [4, 2]\n",
+      "4     23.0                       [8]\n",
+      "...    ...                       ...\n",
+      "1764   0.5  [4, 9, 1, 8, 2, 5, 3, 6]\n",
+      "1765   0.5     [9, 1, 8, 2, 5, 3, 6]\n",
+      "1766   0.5        [1, 8, 2, 5, 3, 6]\n",
+      "1767   0.5        [4, 9, 1, 2, 5, 6]\n",
+      "1768   0.5        [4, 9, 1, 8, 2, 6]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'4': 1281, '9': 151, '1': 169, '8': 51, '7': 47, '2': 17, '5': 480, '3': 266, '6': 6}\n",
       "removing alternatives ['6']\n",
-      "{'7': 1048, '8': 104, '3': 442, '1': 72, '5': 127, '2': 638}\n",
-      "removing alternatives ['1']\n",
-      "{'7': 916, '8': 105, '3': 509, '5': 127, '2': 754}\n",
+      "         n             preference\n",
+      "0     31.0                 [3, 8]\n",
+      "1     30.0                 [4, 2]\n",
+      "2     27.0                    [3]\n",
+      "3     24.0                 [4, 2]\n",
+      "4     23.0                    [8]\n",
+      "...    ...                    ...\n",
+      "1764   0.5  [4, 9, 1, 8, 2, 5, 3]\n",
+      "1765   0.5     [9, 1, 8, 2, 5, 3]\n",
+      "1766   0.5        [1, 8, 2, 5, 3]\n",
+      "1767   0.5        [4, 9, 1, 2, 5]\n",
+      "1768   0.5        [4, 9, 1, 8, 2]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'4': 1262, '9': 159, '1': 171, '8': 46, '7': 48, '2': 18, '5': 497, '3': 265}\n",
+      "removing alternatives ['2']\n",
+      "         n          preference\n",
+      "0     31.0              [3, 8]\n",
+      "1     30.0                 [4]\n",
+      "2     27.0                 [3]\n",
+      "3     24.0                 [4]\n",
+      "4     23.0                 [8]\n",
+      "...    ...                 ...\n",
+      "1764   0.5  [4, 9, 1, 8, 5, 3]\n",
+      "1765   0.5     [9, 1, 8, 5, 3]\n",
+      "1766   0.5        [5, 1, 8, 3]\n",
+      "1767   0.5        [9, 1, 4, 5]\n",
+      "1768   0.5        [9, 1, 4, 8]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'4': 1155, '9': 181, '1': 151, '8': 44, '7': 60, '5': 568, '3': 289}\n",
       "removing alternatives ['8']\n",
-      "{'2': 1531, '3': 509, '7': 139, '5': 127}\n",
-      "removing alternatives ['5']\n",
-      "{'2': 1531, '3': 509, '7': 139}\n",
+      "         n       preference\n",
+      "0     31.0              [3]\n",
+      "1     30.0              [4]\n",
+      "2     27.0              [3]\n",
+      "3     24.0              [4]\n",
+      "4     23.0               []\n",
+      "...    ...              ...\n",
+      "1764   0.5  [4, 9, 1, 5, 3]\n",
+      "1765   0.5     [9, 1, 3, 5]\n",
+      "1766   0.5        [5, 1, 3]\n",
+      "1767   0.5     [9, 1, 4, 5]\n",
+      "1768   0.5        [9, 1, 4]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'4': 1072, '9': 212, '1': 140, '7': 31, '5': 642, '3': 313}\n",
       "removing alternatives ['7']\n",
-      "{'2': 1531, '3': 529}\n",
+      "         n       preference\n",
+      "0     31.0              [3]\n",
+      "1     30.0              [4]\n",
+      "2     27.0              [3]\n",
+      "3     24.0              [4]\n",
+      "4     23.0               []\n",
+      "...    ...              ...\n",
+      "1764   0.5  [4, 9, 1, 5, 3]\n",
+      "1765   0.5     [9, 1, 3, 5]\n",
+      "1766   0.5        [5, 1, 3]\n",
+      "1767   0.5     [9, 1, 4, 5]\n",
+      "1768   0.5        [9, 1, 4]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'4': 989, '9': 269, '1': 140, '5': 668, '3': 313}\n",
+      "removing alternatives ['1']\n",
+      "         n    preference\n",
+      "0     31.0           [3]\n",
+      "1     30.0           [4]\n",
+      "2     27.0           [3]\n",
+      "3     24.0           [4]\n",
+      "4     23.0            []\n",
+      "...    ...           ...\n",
+      "1764   0.5  [9, 3, 4, 5]\n",
+      "1765   0.5     [9, 3, 5]\n",
+      "1766   0.5        [5, 3]\n",
+      "1767   0.5     [9, 4, 5]\n",
+      "1768   0.5        [9, 4]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'9': 1078, '3': 313, '4': 256, '5': 668}\n",
+      "removing alternatives ['4']\n",
+      "         n preference\n",
+      "0     31.0        [3]\n",
+      "1     30.0         []\n",
+      "2     27.0        [3]\n",
+      "3     24.0         []\n",
+      "4     23.0         []\n",
+      "...    ...        ...\n",
+      "1764   0.5  [9, 3, 5]\n",
+      "1765   0.5  [9, 3, 5]\n",
+      "1766   0.5     [5, 3]\n",
+      "1767   0.5     [9, 5]\n",
+      "1768   0.5        [9]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'9': 1078, '3': 313, '5': 668}\n",
       "removing alternatives ['3']\n",
-      "{'2': 1531}\n",
+      "         n preference\n",
+      "0     31.0         []\n",
+      "1     30.0         []\n",
+      "2     27.0         []\n",
+      "3     24.0         []\n",
+      "4     23.0         []\n",
+      "...    ...        ...\n",
+      "1764   0.5     [9, 5]\n",
+      "1765   0.5     [9, 5]\n",
+      "1766   0.5        [5]\n",
+      "1767   0.5     [9, 5]\n",
+      "1768   0.5        [9]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'9': 1078, '5': 668}\n",
+      "removing alternatives ['5']\n",
+      "         n preference\n",
+      "0     31.0         []\n",
+      "1     30.0         []\n",
+      "2     27.0         []\n",
+      "3     24.0         []\n",
+      "4     23.0         []\n",
+      "...    ...        ...\n",
+      "1764   0.5        [9]\n",
+      "1765   0.5        [9]\n",
+      "1766   0.5         []\n",
+      "1767   0.5        [9]\n",
+      "1768   0.5        [9]\n",
+      "\n",
+      "[1769 rows x 2 columns]\n",
+      "{'9': 1126}\n",
       "Reached a decision\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['2']"
+       "['9']"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,30 +522,6 @@
    "source": [
     "STV(df, alternatives)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efda8a0e-8d1d-4955-90f4-65fffce74631",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "264aeba3-11e9-4376-ad3e-f8e476332e53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a4c2f1f-fc89-43ef-ba2f-2d5d0b5a3142",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
